--- a/A3_Q1-2024.ipynb
+++ b/A3_Q1-2024.ipynb
@@ -2247,22 +2247,22 @@
     "\n",
     "|Structures|Accuracy|Parameters|\n",
     "|---|---|---|\n",
-    "|Base   | 88.29%     |669706|\n",
-    "|Deeper|  87.64%       |1863690|\n",
-    "|Wider|  86.91%      |932362|\n",
+    "|Base   | 88.29%     |669,706|\n",
+    "|Deeper|  87.64%       |1,863,690|\n",
+    "|Wider|  86.91%      |932,362|\n",
     "\n",
     "**Observations**\n",
     "1. Base Network:\n",
     "   - Accuracy: 88.29%\n",
-    "   - Trainable Parameters: 199,210\n",
+    "   - Trainable Parameters: 669,706\n",
     "   - Observation: The base network achieved a high accuracy of 88.29% with a moderate number of parameters. This indicates that the original structure is well-suited for the task and efficiently learns the necessary features.\n",
     "2. Wider Network:\n",
     "   - Accuracy: 87.65%\n",
-    "   - Trainable Parameters: 2,663,434\n",
+    "   - Trainable Parameters: 1,863,690\n",
     "   - Observation: The wider network, despite having significantly more parameters, achieved slightly lower accuracy than the base network. This suggests that simply increasing the number of neurons in each layer does not necessarily improve performance and may lead to overfitting.\n",
     "3. Deeper Network:\n",
     "   - Accuracy: 86.91%\n",
-    "   - Trainable Parameters: 669,706\n",
+    "   - Trainable Parameters: 932,362\n",
     "   - Observation: The deeper network also showed slightly lower accuracy compared to the base network. Adding more layers increased the number of parameters but did not result in better performance. This could be due to the increased complexity making it harder for the model to learn effectively within the given epochs.\n",
     "\n",
     "**Conclusion**\n",
